--- a/projetos.html
+++ b/projetos.html
@@ -7,11 +7,12 @@
 	<meta name="author" content="Generation Brasil">
 	<meta name="keywords" content="HTML, CSS, JavaScript">
     <link rel="icon" type="image/svg" href="./assets/img/bella.ico" />
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Meus Projetos</title>
 </head>
 <body>
     <header>
-        <div id="header_content">
+        <div id="header_content" class="flex">
 				<div id="titulo">
 					<h1>Ysabella Santos</h1>
 				</div>
@@ -34,45 +35,42 @@
     </header>
 
     <main>
-        <section id="about">
+        <section id="about" class="flex_start">
                 <h2>Meus Projetos 💗</h2>
 
-                <div id="projetos">
+                <div id="projetos" class="flex" class="flex_container">
+                    <h3>Backend Projeto Blog Pessoal</h3>
+                    <article id="projeto_texto" class="flex"> 
 
-                    <article id="projeto_texto">
-
-                        <h3>Backend Projeto Blog Pessoal</h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad velit sint totam atque? Qui quis illum incidunt nam suscipit ea hic, magnam necessitatibus at alias maxime dicta voluptatum quas? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste et itaque nobis ducimus, perspiciatis architecto quaerat quia, sint similique impedit velit modi quo dignissimos dolorem, molestias optio. Porro, incidunt sequi. 
                         </p>
-                        <img src="./assets/img/projetoblog.png" alt="Foto do Projeto">
+                        <img src="./assets/img/projetoblog.png" alt="Foto do Projeto" class="img_projects">
                     </article>               
+                    <h3>Projeto Web Android</h3>
+                    <article id="projeto_texto" class="flex">
 
-                    <article id="projeto_texto">
-
-                        
-                        <h3>Projeto Web Android</h3>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad velit sint totam atque? Qui quis illum incidunt nam suscipit ea hic, magnam necessitatibus at alias maxime dicta voluptatum quas? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste et itaque nobis ducimus, perspiciatis architecto quaerat quia, sint similique impedit velit modi quo dignissimos dolorem, molestias optio. Porro, incidunt sequi.
                         </p>
-                        <a href="https://ysabellax.github.io/html-css/desafios/desafio10/android.html"><img src="./assets/img/projetoandroid.png" alt="Foto do Projeto"></a>
+                        <a href="https://ysabellax.github.io/html-css/desafios/desafio10/android.html" target="_blank"><img src="./assets/img/projetoandroid.png" alt="Foto do Projeto" class="img_projects"></a>
                         <p>clique na imagem para visualizar</p>
                     </article>     
                 </div>
             </section>
     </main>
 
-            <footer>
+            <footer class="flex">
             <section id="redes_sociais">
 
                 <a href="https://www.linkedin.com/in/ysa-santos/">
-                    <img src="assets/img/linkedin.svg" alt="LinkedIn">
+                    <img src="assets/img/linkedin.svg" alt="LinkedIn" class="social_icon">
                 </a>
                 <a href="https://github.com/ysabellax">
-                    <img src="assets/img/github.svg" alt="GitHub">
+                    <img src="assets/img/github.svg" alt="GitHub" class="social_icon">
                 </a>
                 <a href="">
-                    <img src="assets/img/instagram.svg" alt="Instagram">
+                    <img src="assets/img/instagram.svg" alt="Instagram" class="social_icon">
                 </a>
             </section>
             <h3>
