Correção de Erros

--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="HTML, CSS, JavaScript">
 		<link rel="icon" type="image/svg" href="./assets/img/bella.ico" />
 		<link rel="stylesheet" href="./assets/css/style.css">
-		<title>Meu Perfil</title>
+		<title>Meus Contatos</title>
 	</head>
 	<body>
 		<header>
