--- a/projetos.html
+++ b/projetos.html
@@ -35,26 +35,27 @@
     </header>
 
     <main>
-        <section id="about" class="flex_start">
+        <section id="about">
                 <h2>Meus Projetos 💗</h2>
 
-                <div id="projetos" class="flex" class="flex_container">
+                <div id="projetos" class="flex_container">
                     <h3>Backend Projeto Blog Pessoal</h3>
                     <article id="projeto_texto" class="flex"> 
 
+                        <img src="./assets/img/projetoblog.png" alt="Foto do Projeto" class="img_projects">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad velit sint totam atque? Qui quis illum incidunt nam suscipit ea hic, magnam necessitatibus at alias maxime dicta voluptatum quas? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste et itaque nobis ducimus, perspiciatis architecto quaerat quia, sint similique impedit velit modi quo dignissimos dolorem, molestias optio. Porro, incidunt sequi. 
                         </p>
-                        <img src="./assets/img/projetoblog.png" alt="Foto do Projeto" class="img_projects">
+                        
                     </article>               
                     <h3>Projeto Web Android</h3>
                     <article id="projeto_texto" class="flex">
 
+                        <a href="https://ysabellax.github.io/html-css/desafios/desafio10/android.html" target="_blank"><img src="./assets/img/projetoandroid.png" alt="Foto do Projeto" class="img_projects"></a>
+
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad velit sint totam atque? Qui quis illum incidunt nam suscipit ea hic, magnam necessitatibus at alias maxime dicta voluptatum quas? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste et itaque nobis ducimus, perspiciatis architecto quaerat quia, sint similique impedit velit modi quo dignissimos dolorem, molestias optio. Porro, incidunt sequi.
                         </p>
-                        <a href="https://ysabellax.github.io/html-css/desafios/desafio10/android.html" target="_blank"><img src="./assets/img/projetoandroid.png" alt="Foto do Projeto" class="img_projects"></a>
-                        <p>clique na imagem para visualizar</p>
                     </article>     
                 </div>
             </section>
