Finalizando Projeto Portfólio Inicial

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad velit sint totam atque? Qui quis illum incidunt nam suscipit ea hic, magnam necessitatibus at alias maxime dicta voluptatum quas? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste et itaque nobis ducimus, perspiciatis architecto quaerat quia, sint similique impedit velit modi quo dignissimos dolorem, molestias optio. Porro, incidunt sequi.
                         </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa praesentium totam vitae reprehenderit delectus accusamus vero animi, obcaecati voluptas quos quas, id, tempore ipsum officia eveniet sint. Saepe, officia sint.
+                        </p>
                     </article>
                 </div>
             </section>
