--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
         <main>
             <section id="about" class="flex_start">
-                <h2>Um pouco sobre mim</h2>
+                <h2>Sobre a Ysabella</h2>
 
-                <div id="conteúdo" class="flex">
+                <div id="conteudo" class="flex">
                     <img src="./assets/img/bellaskingit.png" alt="Foto do Criador desse Conteúdo"
                     class="img_profile"
                     >
@@ -57,9 +57,10 @@
                     </article>
                 </div>
             </section>
+            
+            <h2>Meu vídeo Favorito:</h2>
 
             <section id="video" class="flex_start">
-                <h2>Meu vídeo Favorito:</h2>
 
                 <div id="youtube" class="flex">
                     <iframe 
