--- a/projetos.html
+++ b/projetos.html
@@ -42,7 +42,7 @@
                     <h3>Backend Projeto Blog Pessoal</h3>
                     <article id="projeto_texto" class="flex"> 
 
-                        <img src="./assets/img/projetoblog.png" alt="Foto do Projeto" class="img_projects">
+                        <img src="./assets/img/fotoswaggerblog2.png" alt="Foto do Projeto" class="img_projects">
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad velit sint totam atque? Qui quis illum incidunt nam suscipit ea hic, magnam necessitatibus at alias maxime dicta voluptatum quas? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste et itaque nobis ducimus, perspiciatis architecto quaerat quia, sint similique impedit velit modi quo dignissimos dolorem, molestias optio. Porro, incidunt sequi. 
                         </p>
@@ -51,7 +51,7 @@
                     <h3>Projeto Web Android</h3>
                     <article id="projeto_texto" class="flex">
 
-                        <a href="https://ysabellax.github.io/html-css/desafios/desafio10/android.html" target="_blank"><img src="./assets/img/projetoandroid.png" alt="Foto do Projeto" class="img_projects"></a>
+                        <a href="https://ysabellax.github.io/html-css/desafios/desafio10/android.html" target="_blank"><img src="./assets/img/fotoandroid.png" alt="Foto do Projeto" class="img_projects"></a>
 
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ad velit sint totam atque? Qui quis illum incidunt nam suscipit ea hic, magnam necessitatibus at alias maxime dicta voluptatum quas? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste et itaque nobis ducimus, perspiciatis architecto quaerat quia, sint similique impedit velit modi quo dignissimos dolorem, molestias optio. Porro, incidunt sequi.
