Implementando Eventos utilizando JavaScript

--- a/contato.html
+++ b/contato.html
@@ -37,7 +37,7 @@
 		</header>
 
 		<main>
-
+			<h2>Entre em Contato Comigo:</h2>
             <div id="contact" class="flex">
 
                 <form action="#" method="submit" id="formulario">
@@ -77,9 +77,8 @@
 						name="message"
 						placeholder="Digite sua mensagem"
 						required
-					>
-					</textarea>
-
+					></textarea>
+					<br>
 					<button type="submit">Enviar</button>
                 </form>
 
@@ -130,5 +129,8 @@
 			</h3>
 
 		</footer>
+
+		<!-- Script JavaScript-->
+		<script src="assets/js/script.js"></script>
 	</body>
 </html>
